fix: left-align hero container

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1400,9 +1400,7 @@ body.is-white-text .global-button:not(.no-color),body.is-white-text .global-dyna
 
 /* Hero Container */
 .hero-container {
-   text-align: center;
-   max-width: 1020px;
-   margin: 0 auto;
+   text-align: left;
 }
 
 .hero-bold-title {
